XMLExper/m12/m12_476_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘const char* tinyxml2::XMLElement::GetText() const’:
tinyxml2.cpp:1714:60: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLText*’ (conversion casts away constness)
 1714 |         return /*PCI*/dynamic_cast<tinyxml2::XMLText*>(node)->Value();
      |                                                            ^
diff: tinyxml2.S: No such file or directory
